update contents, add example